@@ -9,6 +9,7 @@ SRM (0.5.0-1)
 
   * Fixed a security vulnerability where the hardware cursor plane pointer reference used by a connector was set to NULL
     before the connector was completely uninitialized. This could have caused crashes due to racing conditions between threads.
+  * Enabled compiler warning messages for SRMLog functions to alert when the value types to print do not match the specified string format.
 
   # Documentation
 
